--- a/news_app/templates/all-news.html
+++ b/news_app/templates/all-news.html
@@ -1,55 +1,56 @@
 {% extends 'base.html' %}
 {% block content %}
-    {% if user.is_authenticated %}
-        <!DOCTYPE html>
-        <html lang="en">
-        <head>
-            <!-- Required meta tags -->
-            <meta charset="utf-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-            <!-- Bootstrap CSS -->
-            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-                  integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
-                  crossorigin="anonymous">
-            <title>All news</title>
-        </head>
-        <body>
-        <h1>All News Page</h1>
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+              crossorigin="anonymous">
+        <title>All news</title>
+    </head>
+    <body>
+    <h1>All News Page</h1>
 
-        {#    <div>#}
-        {#       {% for n in my_news %}#}
-        {#           <h5>category: {{ n.category }}</h5>#}
-        {#            <h3>{{ n.title }}</h3>#}
-        {#            <h3>{{ n.content }}</h3>#}
-        {#         <img src="/media/{{ n.image }}" alt="No stuff"/>#}
-        {#            <img src="/media/football.jpg" alt="No stuff"/>#}
-        {#        {% endfor %}#}
-        {#    </div>#}
+    {#    <div>#}
+    {#       {% for n in my_news %}#}
+    {#           <h5>category: {{ n.category }}</h5>#}
+    {#            <h3>{{ n.title }}</h3>#}
+    {#            <h3>{{ n.content }}</h3>#}
+    {#         <img src="/media/{{ n.image }}" alt="No stuff"/>#}
+    {#            <img src="/media/football.jpg" alt="No stuff"/>#}
+    {#        {% endfor %}#}
+    {#    </div>#}
 
 
-        <div class="card" style="width: 18rem;">
-            {% for n in my_news %}
-                <img src="/media/{{ n.image }}" class="card-img-top" alt="No stuff">
-                <div class="card-body">
-                    <h5 class="card-title">{{ n.title }}</h5>
-                    <p class="card-text">{{ n.content }}</p>
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Category: {{ n.category }}</li>
-                </ul>
-
+    <div class="card" style="width: 18rem;">
+        {% for n in my_news %}
+            <img src="/media/{{ n.image }}" class="card-img-top" alt="No stuff">
+            <div class="card-body">
+                <h5 class="card-title">{{ n.title }}</h5>
+                <p class="card-text">{{ n.content }}</p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Category: {{ n.category }}</li>
+            </ul>
+            {% if user.is_authenticated %}
                 <div class="card-body">
                     <a href='/detail/{{ n.id }}' class="card-link">Comment</a>
                 </div>
                 <br/>
-            {% endfor %}
-        </div>
-        </div>
-        </body>
-        </html>
-    {% else %}
-        <h1>Please Login to see all news</h1>
-    {% endif %}
+            {% else %}
+                <br/>
+                <h1>Please Login to see comments</h1>
+            {% endif %}
+        {% endfor %}
+    </div>
+    </div>
+    </body>
+    </html>
+
 
 {% endblock %}
