--- a/news_app/templates/detail.html
+++ b/news_app/templates/detail.html
@@ -15,18 +15,18 @@
             {% endfor %}
             <form method="post" action="/detail/{{ news.id }}">
                 {% csrf_token %}
-                <div class="form-group row">
-                    <label class="col-md-2">Name<span class="text-danger">*</span></label>
-                    <div class="col-md-10">
-                        <input type="text" name="name" required class="form-control"/>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-md-2">Email<span class="text-danger">*</span></label>
-                    <div class="col-md-10">
-                        <input type="temailext" name="email" required class="form-control"/>
-                    </div>
-                </div>
+{#                <div class="form-group row">#}
+{#                    <label class="col-md-2">Name<span class="text-danger">*</span></label>#}
+{#                    <div class="col-md-10">#}
+{#                        <input type="text" name="name" required class="form-control"/>#}
+{#                    </div>#}
+{#                </div>#}
+{#                <div class="form-group row">#}
+{#                    <label class="col-md-2">Email<span class="text-danger">*</span></label>#}
+{#                    <div class="col-md-10">#}
+{#                        <input type="temailext" name="email" required class="form-control"/>#}
+{#                    </div>#}
+{#                </div>#}
                 <div class="form-group row">
                     <label class="col-md-2">Comment<span class="text-danger">*</span></label>
                     <div class="col-md-10">
@@ -47,8 +47,8 @@
                 <blockquote class="blockquote text-right">
                     <p class="mb-0">{{ comment.comment }}</p>
                     <br/>
-                    <footer class="blockquote-footer">{{ comment.name }} <cite
-                            title="Source Title">{{ comment.email }}</cite></footer>
+                    <footer class="blockquote-footer">{{ comment.user.name }} <cite
+                            title="Source Title">{{ comment.user.email }}</cite></footer>
                 </blockquote>
                 <hr/>
             {% endfor %}
